user-charts/admin-testing-scalability/templates/network/admin-scalability-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scalability
  labels:
    app: scalability
spec:
  type: ClusterIP
  selector:
    app: scalability
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
