user-charts/admin-testing-scalability/templates/network/admin-scalability-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scalability
spec:
  parentRefs:
    - name: testing-scalability-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "sb.192.168.100.241.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: scalability
          port: 8080
